--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,19 +19,22 @@ INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../bin)
 
 SET(QT_USE_QTMAIN TRUE)
-SET(CMAKE_AUTOMOC ON)
-SET(CMAKE_AUTOUIC ON)
-SET(CMAKE_AUTORCC ON)
+#SET(CMAKE_AUTOMOC ON)
+#SET(CMAKE_AUTOUIC ON)
+#SET(CMAKE_AUTORCC ON)
 
-#SET(HEADERS_MOC ${CMAKE_CURRENT_SOURCE_DIR}/testImageViewer.h )
+SET(HEADERS_MOC ${THIS_EXE_HEADERS})
+SET(SOURCE_FORMS)
+SET(SOURCE_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../resources/CcMainWin.qrc )
 
-#QT4_WRAP_CPP(EXE_HEADERS_MOC ${HEADERS_MOC})
-#QT4_WRAP_UI(EXE_FORMS_HEADERS ${SOURCE_FORMS})
-#QT4_ADD_RESOURCES(EXE_RESOURCES_RCC ${SOURCE_RESOURCES})
+QT4_WRAP_CPP(EXE_HEADERS_MOC ${HEADERS_MOC})
+QT4_WRAP_UI(EXE_FORMS_HEADERS ${SOURCE_FORMS})
+QT4_ADD_RESOURCES(EXE_RESOURCES_RCC ${SOURCE_RESOURCES})
 
 
 ADD_EXECUTABLE(${THIS_EXE_NAME} ${THIS_EXE_HEADERS} ${THIS_EXE_SRCS} 
-#								${EXE_HEADERS_MOC}
+								${EXE_HEADERS_MOC}
+								${EXE_RESOURCES_RCC}
 			   )
 
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../bin)
